--- a/templates/contacto.html
+++ b/templates/contacto.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+  <head><!--Informacion del documetno :no visible-->
     <title>Contacto</title>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -24,7 +24,7 @@
     <header>
       <nav
         class="navbar navbar-expand-lg navbar-light bg-light bg-dark navbar navbar-dark "
-      >
+      ><!-- estilo de la navegación-->
         <a class="navbar-brand" href="#">
           <img
             src="https://cdn.glitch.com/94b1782f-485d-4be9-be6b-b48fefbcb22b%2Frsz_branimir-balogovic-faiqrv7fge0-unsplash.jpg?v=1588692801974"
@@ -32,9 +32,9 @@
             width="60"
             height="60"
             alt=""
-          />
+          /><!-- Logo con atributos  (sin ruta)-->
         </a>
-        <ul>
+        <ul><!-- opciones de la navegación con rutas (interiores)-->
           <li class="nav-item active">
             <a class="nav-link btn btn-dark" href="/">Inicio </a>
           </li>
@@ -49,10 +49,8 @@
         class="cover d-flex justify-content-center align-items-center flex-column"
         style="background-image: url(https://cdn.glitch.com/94b1782f-485d-4be9-be6b-b48fefbcb22b%2Frsz_pills-on-blue-background-3936369.jpg?v=1589211449978);"
       >
-        <h1></h1>
       </div>
     </header>
-    <section>
       <!-- Infromación de contacto-->
       <p class="textoconta">
         Trinidad González Padin: 2944581418<br />
@@ -62,10 +60,9 @@
           class="rounded-circle"
           width="80"
           height="80"
-          alt=""
-        />
+          alt="logo instaram"
+        /><!-- logo con atributos-->
         Instagram: @trinigonzalezpadin
       </p>
-    </section>
   </body>
 </html>
