--- a/templates/entrenamiento.html
+++ b/templates/entrenamiento.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+  <head><!--Informacion del documetno :no visible-->
     <title>Pandemia Covid-19</title>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -23,7 +23,7 @@
     <header>
       <nav
         class="navbar navbar-expand-lg navbar-light bg-light bg-dark navbar navbar-dark "
-      >
+      ><!-- estilo de la navegación-->
         <a class="navbar-brand" href="#">
           <img
             src="https://cdn.glitch.com/94b1782f-485d-4be9-be6b-b48fefbcb22b%2Frsz_branimir-balogovic-faiqrv7fge0-unsplash.jpg?v=1588692801974"
@@ -31,9 +31,9 @@
             width="60"
             height="60"
             alt=""
-          />
+          /><!-- Logo con atributos  (sin ruta)-->
         </a>
-        <ul>
+        <ul><!-- opciones de la navegación con rutas (interiores)-->
           <li class="nav-item active">
             <a class="nav-link btn btn-dark" href="/">Inicio </a>
           </li>
@@ -71,7 +71,7 @@
     </section>
     <div class="indexcards">
       <!-- links a sitios recomendados-->
-      <h3><u>Sitios recomedados:</u></h3>
+      <h3><u>Sitios recomedados:</u></h3><!--cada uno con ruta(externa) y boton con estilo-->
       <p>Gym Virtual</p>
       <a href="http://gymvirtual.com/" class="btn btn-dark">Ir</a>
       <p>Runtastic-Addidas</p>
@@ -90,10 +90,10 @@
 
     <!--Pie de pagina-->
     <section class="footer">
-      <p style="color:cornsilk">
+      <p>
         Para más información no dudes en contactarte
       </p>
-      <a href="/contacto" class="btn btn-dark">Contacto</a>
+      <a href="/contacto" class="btn btn-dark">Contacto</a><!--botón a la plantilla de contacto-->
     </section>
   </body>
 </html>
