--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+  <head><!--Informacion del documetno :no visible-->
     <title>Pandemia Covid-19</title>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -24,8 +24,9 @@
     <header>
       <nav
         class="navbar navbar-expand-lg navbar-light bg-light bg-dark navbar navbar-dark "
-        style="background-color: silver;"
-      >
+       
+      ><!-- estilo de la navegación-->
+
         <a class="navbar-brand" href="#">
           <img
             src="https://cdn.glitch.com/94b1782f-485d-4be9-be6b-b48fefbcb22b%2Frsz_branimir-balogovic-faiqrv7fge0-unsplash.jpg?v=1588692801974"
@@ -33,9 +34,11 @@
             width="60"
             height="60"
             alt=""
-          />
+          /><!-- Logo con atributos  (sin ruta)-->
+
         </a>
-        <ul>
+        <ul><!-- opciones de la navegación con rutas (interiores)-->
+
           <li class="nav-item active">
             <a class="nav-link btn btn-dark" href="/"> Inicio </a>
           </li>
@@ -50,17 +53,13 @@
       <div
         class="cover d-flex justify-content-center align-items-center flex-column"
         style="background-image: url(https://cdn.glitch.com/94b1782f-485d-4be9-be6b-b48fefbcb22b%2Frsz_pills-on-blue-background-3936369.jpg?v=1589211449978);"
-      >
-        <div>
-          <p>
-            La Pandemia del siglo 21
-          </p>
-        </div>
+      ><!-- foto de portada -->
+            <h3>La Pandemia del siglo 21</h3>
       </div>
     </header>
     <!-- cuerpo de la seccion-->
     <section class="indexcards">
-      <!-- Presentacion de las 4 cartas cada una con su ruta-->
+      <!-- Presentacion de las 4 cartas:título,descripción,imagen(atributos)y ruta(interna)-->
       <div class="container mt-5 mb-5">
         <div class="row justify-content-start">
           <div class="col-12 col-sm-6 mt-2">
@@ -69,7 +68,7 @@
                 src="https://cdn.glitch.com/94b1782f-485d-4be9-be6b-b48fefbcb22b%2Frsz_1cdc-w9keokhajkw-unsplash.jpg?v=1588691997173"
                 class="card-img card-img-top"
                 alt="foto ciencia"
-              />
+              /><!-- imagen que ajusto a la carta-->
 
               <div class="card-body">
                 <!-- Carta ciencia-->
@@ -90,7 +89,7 @@
                 src="https://cdn.glitch.com/94b1782f-485d-4be9-be6b-b48fefbcb22b%2Frsz_jamie-street-tb5a-qti6xg-unsplash.jpg?v=1588692229998"
                 class=" card-img card-img-top"
                 alt="foto salud"
-              />
+              /><!-- imagen que ajusto a la carta-->
               <div class="card-body">
                 <!-- Carta salud-->
                 <h5 class="card-title">Salud en casa</h5>
@@ -108,7 +107,7 @@
                 src="https://cdn.glitch.com/94b1782f-485d-4be9-be6b-b48fefbcb22b%2Frsz_jessica-lewis-vi6szzwgc34-unsplash.jpg?v=1589333623353"
                 class="card-img card-img-top"
                 alt="foto lavamanos"
-              />
+              /><!-- imagen que ajusto a la carta-->
               <div class="card-body">
                 <!-- Carta informacion util-->
                 <h5 class="card-title">Información Útil</h5>
@@ -128,7 +127,7 @@
                 src="https://cdn.glitch.com/94b1782f-485d-4be9-be6b-b48fefbcb22b%2Frsz_anastasiia-chepinska-obmbhmrc3pw-unsplash.jpg?v=1589731177849"
                 class="card-img card-img-top"
                 alt="foto ventanal"
-              />
+              /><!-- imagen que ajusto a la carta-->
               <div class="card-body">
                 <!-- Carta Aprendizaje-->
                 <h5 class="card-title">Aprender en casa</h5>
@@ -145,10 +144,10 @@
     </section>
     <!--Pie de pagina-->
     <section class="footer">
-      <p style="color:cornsilk">
+      <p>
         Para más información no dudes en contactarte
       </p>
-      <a href="/contacto" class="btn btn-dark">Contacto</a>
+      <a href="/contacto" class="btn btn-dark">Contacto</a><!--botón a la plantilla de contacto-->
     </section>
   </body>
 </html>
