--- a/templates/informacionc.html
+++ b/templates/informacionc.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+  <head><!--Informacion del documetno :no visible-->
     <title>Información científica</title>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -23,7 +23,7 @@
     <header>
       <nav
         class="navbar navbar-expand-lg navbar-light bg-light bg-dark navbar navbar-dark "
-      >
+      ><!--estilo barra navegación-->
         <a class="navbar-brand" href="#">
           <img
             src="https://cdn.glitch.com/94b1782f-485d-4be9-be6b-b48fefbcb22b%2Frsz_branimir-balogovic-faiqrv7fge0-unsplash.jpg?v=1588692801974"
@@ -31,9 +31,9 @@
             width="60"
             height="60"
             alt=""
-          />
+          /><!--logo con atributos (sin ruta)-->
         </a>
-        <ul>
+        <ul><!--opciones de la navegacion con rutas(internas)-->
           <li class="nav-item active">
             <a class="nav-link btn btn-dark" href="/">Inicio </a>
           </li>
@@ -133,7 +133,7 @@
       </dl>
     </div>
 
-    <!-- Imagenes cienia una al lado de la otra-->
+    <!-- Imágenes centradas-->
     <div style="float:left;width:50%;">
       <div style="padding-right:10px;">
         <div class="text-center">
@@ -157,9 +157,8 @@
     </div>
 
     <div style="clear: both;"></div>
-    <!-- -->
+    <!--Introducción 2 -->
     <div class="indexcards">
-      <!--Introducción 2 -->
       <p class="introsalud">
         <u> Investigación Crítica:</u>
         Frente a la situación de contingencia como usarios de redes sociales y
@@ -169,8 +168,8 @@
         visitar.Siempre recordá que si querés ser un buen científico debes saber
         recolectar información de calidad.
       </p>
-      <ul class="list-unstyled">
-        <!-- Fuentes recomendadas con logo y rutas fuera del sitio web-->
+      <!-- Fuentes recomendadas con logo y rutas (externas)-->
+      <ul class="list-unstyled"><!-- Elementos de la lista:logo(atributo),nombre y ruta(boton)-->
         <li class="media my-4">
           <img
             src="https://cdn.glitch.com/94b1782f-485d-4be9-be6b-b48fefbcb22b%2Frsz_who.jpg?v=1589723656592"
@@ -245,10 +244,10 @@
 
     <!--Pie de pagina-->
     <section class="footer">
-      <p style="color:cornsilk">
+      <p>
         Para más información no dudes en contactarte
       </p>
-      <a href="/contacto" class="btn btn-dark">Contacto</a>
+      <a href="/contacto" class="btn btn-dark">Contacto</a><!--botón a la plantilla de contacto-->
     </section>
   </body>
 </html>
