--- a/templates/manualp.html
+++ b/templates/manualp.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+  <head><!--Informacion del documetno :no visible-->
     <title>Información práctica</title>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -23,7 +23,7 @@
     <header>
       <nav
         class="navbar navbar-expand-lg navbar-light bg-light bg-dark navbar navbar-dark "
-      >
+      ><!-- estilo de la navegación-->
         <a class="navbar-brand" href="#">
           <img
             src="https://cdn.glitch.com/94b1782f-485d-4be9-be6b-b48fefbcb22b%2Frsz_branimir-balogovic-faiqrv7fge0-unsplash.jpg?v=1588692801974"
@@ -31,9 +31,9 @@
             width="60"
             height="60"
             alt=""
-          />
+          /><!-- Logo con atributos (sin ruta)-->
         </a>
-        <ul>
+        <ul><!-- opciones de la navegación con rutas (interiores)-->
           <li class="nav-item active">
             <a class="nav-link btn btn-dark" href="/">Inicio </a>
           </li>
@@ -103,63 +103,63 @@
         />
         <img
           src="https://cdn.glitch.com/94b1782f-485d-4be9-be6b-b48fefbcb22b%2Fmm5.jpg?v=1589395934391"
-          class="traino img-thumbnail rounded"
+          class="img-thumbnail rounded"
           width="500"
           height="500"
         />
         <img
           src="https://cdn.glitch.com/94b1782f-485d-4be9-be6b-b48fefbcb22b%2Fmm6.jpg?v=1589396120562"
-          class="traino img-thumbnail rounded"
+          class="img-thumbnail rounded"
           width="500"
           height="500"
         />
         <img
           src="https://cdn.glitch.com/94b1782f-485d-4be9-be6b-b48fefbcb22b%2Fmm7.jpg?v=1589396159926"
-          class="traino img-thumbnail rounded"
+          class="img-thumbnail rounded"
           width="500"
           height="500"
         />
         <img
           src="https://cdn.glitch.com/94b1782f-485d-4be9-be6b-b48fefbcb22b%2Fmm8.jpg?v=1589396173814"
-          class="traino img-thumbnail rounded"
+          class="img-thumbnail rounded"
           width="500"
           height="500"
         />
         <img
           src="https://cdn.glitch.com/94b1782f-485d-4be9-be6b-b48fefbcb22b%2F3.jpg?v=1589747786849"
-          class="traino img-thumbnail rounded"
+          class="img-thumbnail rounded"
           width="500"
           height="500"
         />
 
         <img
           src="https://cdn.glitch.com/94b1782f-485d-4be9-be6b-b48fefbcb22b%2F6.jpg?v=1589747790506"
-          class="traino img-thumbnail rounded"
+          class="img-thumbnail rounded"
           width="500"
           height="500"
         />
 
         <img
           src="https://cdn.glitch.com/94b1782f-485d-4be9-be6b-b48fefbcb22b%2F5.jpg?v=1589747791221"
-          class="traino img-thumbnail rounded"
+          class="img-thumbnail rounded"
           width="500"
           height="500"
         />
         <img
           src="https://cdn.glitch.com/94b1782f-485d-4be9-be6b-b48fefbcb22b%2F4.jpg?v=1589747791503"
-          class="traino img-thumbnail rounded"
+          class="img-thumbnail rounded"
           width="500"
           height="500"
         />
-      </marquee>
+      </marquee><!-- Todas las imagenes con el mismo estilo(borde redondeado blanco) -->
     </section>
 
     <!--Pie de pagina-->
     <section class="footer">
-      <p style="color:cornsilk">
+      <p>
         Para más información no dudes en contactarte
       </p>
-      <a href="/contacto" class="btn btn-dark">Contacto</a>
+      <a href="/contacto" class="btn btn-dark">Contacto</a><!--botón a la plantilla de contacto-->
     </section>
   </body>
 </html>
