--- a/templates/recreacion.html
+++ b/templates/recreacion.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+  <head><!--Informacion del documetno :no visible-->
     <title>Recreación</title>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -24,7 +24,7 @@
     <header>
       <nav
         class="navbar navbar-expand-lg navbar-light bg-light bg-dark navbar navbar-dark "
-      >
+      ><!-- estilo de la navegación-->
         <a class="navbar-brand" href="#">
           <img
             src="https://cdn.glitch.com/94b1782f-485d-4be9-be6b-b48fefbcb22b%2Frsz_branimir-balogovic-faiqrv7fge0-unsplash.jpg?v=1588692801974"
@@ -32,9 +32,9 @@
             width="60"
             height="60"
             alt=""
-          />
+          /><!-- Logo con atributos  (sin ruta)-->
         </a>
-        <ul>
+        <ul><!-- opciones de la navegación con rutas (interiores)-->
           <li class="nav-item active">
             <a class="nav-link btn btn-dark" href="/">Inicio </a>
           </li>
@@ -57,9 +57,9 @@
     <!-- cuerpo de la seccion-->
     <section class="indexcards">
       <h2><u>Actividades sugeridas </u></h2>
-      <!-- lista con imágenes y rutas fuera del Sitio Web-->
+      <!-- lista con imágenes y rutas(externas)-->
 
-      <ul class="list-unstyled">
+      <ul class="list-unstyled"><!--Elementos lista:imagen(atributo),titulo,decripcion y ruta(externa)-->
         <li class="media my-4">
           <img
             src="https://cdn.glitch.com/94b1782f-485d-4be9-be6b-b48fefbcb22b%2Frsz_pinceles.jpg?v=1589204571427"
@@ -75,8 +75,7 @@
             <a
               href="https://ar.pinterest.com/cejaurena/manualidades-para-la-cuarentena/"
               class="btn btn-dark"
-              >Ir</a
-            >
+              >Ir</a>
           </div>
         </li>
         <li class="media my-4">
@@ -93,8 +92,7 @@
             <a
               href="http://www.sensacine.com/peliculas/mejores/nota-espectadores/"
               class="btn btn-dark"
-              >Ir</a
-            >
+              >Ir</a >
           </div>
         </li>
         <li class="media my-4">
@@ -113,8 +111,7 @@
             <a
               href="https://open.spotify.com/playlist/5IO45YtKXacQ3ACtDLihbP"
               class="btn btn-dark"
-              >Ir</a
-            >
+              >Ir</a>
           </div>
         </li>
         <li class="media my-4">
@@ -130,8 +127,7 @@
             <a
               href="https://www.casadellibro.com/libros-recomendados"
               class="btn btn-dark"
-              >Ir</a
-            >
+              >Ir</a>
           </div>
         </li>
         <li class="media my-4">
@@ -172,10 +168,10 @@
 
     <!--Pie de pagina-->
     <section class="footer">
-      <p style="color:cornsilk">
+      <p>
         Para más información no dudes en contactarte
       </p>
-      <a href="/contacto" class="btn btn-dark">Contacto</a>
+      <a href="/contacto" class="btn btn-dark">Contacto</a><!--botón a la plantilla de contacto-->
     </section>
   </body>
 </html>
