--- a/templates/salud.html
+++ b/templates/salud.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+  <head><!--Informacion del documetno :no visible-->
     <title>Salud en casa</title>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -24,7 +24,7 @@
     <header>
       <nav
         class="navbar navbar-expand-lg navbar-light bg-light bg-dark navbar navbar-dark "
-      >
+      ><!-- estilo de la navegación-->
         <a class="navbar-brand" href="#">
           <img
             src="https://cdn.glitch.com/94b1782f-485d-4be9-be6b-b48fefbcb22b%2Frsz_branimir-balogovic-faiqrv7fge0-unsplash.jpg?v=1588692801974"
@@ -32,9 +32,9 @@
             width="60"
             height="60"
             alt=""
-          />
+          /><!-- Logo con atributos (sin ruta)-->
         </a>
-        <ul>
+        <ul><!-- opciones de la navegación con rutas (interiores)-->
           <li class="nav-item active">
             <a class="nav-link btn btn-dark" href="/">Inicio </a>
           </li>
@@ -82,17 +82,16 @@
         estar en el individuo factor de gran importanica en la situación actual.
       </p>
       <div class="container mt-5 mb-5">
-        <!-- Presentacion de las 2 cratas con ruta dentro del Sitio Web-->
+        <!-- Presentación de las 2 cratas:imagen(atributos),título,descrpción y ruta (interna)-->
         <div class="row justify-content-start">
-          <div class="col-12 col-sm-6 mt-2">
+          <div class="col-12 col-sm-6 mt-2"><!-- Carta nutrición-->
             <div class="card">
               <img
                 src="https://cdn.glitch.com/94b1782f-485d-4be9-be6b-b48fefbcb22b%2Frsz_ja-ma--goux23dnks-unsplash.jpg?v=1588798048599"
                 class="card-img card-img-top"
-                alt="..."
+                alt="verduras y frutas"
               />
               <div class="card-body">
-                <!-- Carta nutrición-->
                 <h5 class="card-title">Nutrición en tiempos de pandemia</h5>
                 <p class="card-text">
                   Infromación nutrcional y lista de compras inteligente para
@@ -104,15 +103,14 @@
               </div>
             </div>
           </div>
-          <div class="col-12 col-sm-6 mt-2">
+          <div class="col-12 col-sm-6 mt-2"><!-- Carta entrenamiento-->
             <div class="card">
               <img
                 src="https://cdn.glitch.com/94b1782f-485d-4be9-be6b-b48fefbcb22b%2Frsz_kelly-sikkema-be6k8sqt2fq-unsplash.jpg?v=1588798361384"
                 class=" card-img card-img-top"
-                alt="..."
+                alt="pesas de entrenamiento"
               />
               <div class="card-body">
-                <!-- Carta entrenamiento-->
                 <h5 class="card-title">Entrenamiento</h5>
                 <p class="card-text">
                   Ideas para entrenar en casa
@@ -128,10 +126,10 @@
     </section>
     <!--Pie de pagina-->
     <section class="footer">
-      <p style="color:cornsilk">
+      <p>
         Para más información no dudes en contactarte
       </p>
-      <a href="/contacto" class="btn btn-dark">Contacto</a>
+      <a href="/contacto" class="btn btn-dark">Contacto</a><!--botón a la plantilla de contacto-->
     </section>
   </body>
 </html>
