--- a/static/css/style.css
+++ b/static/css/style.css
@@ -4,10 +4,12 @@ margin: 0em;
 background-color: grey;
 }
 
-/*.fondo{
+.fondo{
   background-color: grey;
-}*/
-/* Estilo aplicado a todas las portadas */
+
+}
+
+ /* Estilo aplicado a todas las portadas */
 .cover {
   height: 400px;
   background-size: cover;
