--- a/templates/listasuper.html
+++ b/templates/listasuper.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+  <head><!--Informacion del documetno :no visible-->
     <title>Alimentación de Pandemia</title>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -24,7 +24,7 @@
     <header>
       <nav
         class="navbar navbar-expand-lg navbar-light bg-light bg-dark navbar navbar-dark "
-      >
+      ><!-- estilo de la navegación-->
         <a class="navbar-brand" href="#">
           <img
             src="https://cdn.glitch.com/94b1782f-485d-4be9-be6b-b48fefbcb22b%2Frsz_branimir-balogovic-faiqrv7fge0-unsplash.jpg?v=1588692801974"
@@ -32,9 +32,9 @@
             width="60"
             height="60"
             alt=""
-          />
+          /><!-- Logo con atributos  (sin ruta)-->
         </a>
-        <ul>
+        <ul><!-- opciones de la navegación con rutas (interiores)-->
           <li class="nav-item active">
             <a class="nav-link btn btn-dark" href="/">Inicio </a>
           </li>
@@ -59,7 +59,7 @@
     <!-- cuerpo de la seccion-->
     <section class="indexcards">
       <h2><u>Información sobre los Macro-Nutrientes </u></h2>
-      <!-- Listado macro nutrientes con foto-->
+      <!-- Listado macro nutrientes:foto(atributo),nombre y texto-->
 
       <ul class="list-unstyled">
         <li class="media my-4">
@@ -146,10 +146,10 @@
             width="70"
             height="70"
             alt="foto bolsa mercado"
-          />
+          /><!-- imagen con atributos -->
         </h2>
 
-        <dl>
+        <dl><!-- Elementos de la lista -->
           <dt><u>Frutas y Verduras</u></dt>
           <dd>
             Serán las fuentes NATURALES de vitaminas y minerales.Algunas ideas
@@ -191,10 +191,10 @@
     </section>
     <!--Pie de pagina-->
     <section class="footer">
-      <p style="color:cornsilk">
+      <p>
         Para más información no dudes en contactarte
       </p>
-      <a href="/contacto" class="btn btn-dark">Contacto</a>
+      <a href="/contacto" class="btn btn-dark">Contacto</a><!--botón a la plantilla de contacto-->
     </section>
   </body>
 </html>
