--- a/templates/psico.html
+++ b/templates/psico.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+  <head><!--Informacion del documetno :no visible-->
     <title>Aprendizaje</title>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -24,7 +24,7 @@
       <!-- Barra de navegacion y portada-->
       <nav
         class="navbar navbar-expand-lg navbar-light bg-light bg-dark navbar navbar-dark "
-      >
+      ><!-- estilo de la navegación-->
         <a class="navbar-brand" href="#">
           <img
             src="https://cdn.glitch.com/94b1782f-485d-4be9-be6b-b48fefbcb22b%2Frsz_branimir-balogovic-faiqrv7fge0-unsplash.jpg?v=1588692801974"
@@ -32,9 +32,9 @@
             width="60"
             height="60"
             alt=""
-          />
+          /><!-- Logo con atributos (sin ruta)-->
         </a>
-        <ul>
+        <ul><!-- opciones de la navegación con rutas (interiores)-->
           <li class="nav-item active">
             <a class="nav-link btn btn-dark" href="/">Inicio </a>
           </li>
@@ -75,7 +75,7 @@
         <div class="row justify-content-start">
           <div class="col-12 col-sm-6 mt-2">
             <div class="card">
-              <!-- Carta-recreación-->
+              <!-- Carta-recreación con imagen ajustada al estilo de la carta-->
               <img
                 src="https://cdn.glitch.com/94b1782f-485d-4be9-be6b-b48fefbcb22b%2Frsz_steve-johnson-idmd4iw9xve-unsplash.jpg?v=1589159161091"
                 class="card-img card-img-top"
@@ -88,7 +88,7 @@
                 </p>
                 <a href="{{ url_for('recreacion') }}" class="btn btn-dark"
                   >Ir</a
-                >
+                ><!--Ruta (interna)-->
               </div>
             </div>
           </div>
@@ -107,7 +107,7 @@
                 </p>
                 <a href="{{ url_for('aprendizaje') }}" class="btn btn-dark"
                   >Ir</a
-                >
+                ><!-- Ruta(interna)-->
               </div>
             </div>
           </div>
@@ -117,10 +117,10 @@
 
     <!--Pie de pagina-->
     <section class="footer">
-      <p style="color:cornsilk">
+      <p>
         Para más información no dudes en contactarte
       </p>
-      <a href="/contacto" class="btn btn-dark">Contacto</a>
+      <a href="/contacto" class="btn btn-dark">Contacto</a><!--botón a la plantilla de contacto-->
     </section>
   </body>
 </html>
