--- a/templates/aprendizaje.html
+++ b/templates/aprendizaje.html
@@ -18,7 +18,7 @@
       href="{{ url_for('static', filename='css/style.css') }}"
     />
   </head>
-  <body class="fondo">
+  <body>
     <!-- Barra de navegacion y portada-->
     <header>
       <nav
