--- a/templates/informacionc.html
+++ b/templates/informacionc.html
@@ -18,7 +18,7 @@
     />
     <!-- Anclaje al archivo de estilos-->
   </head>
-  <body class="fondo">
+  <body>
     <!-- Barra de navegacion y portada-->
     <header>
       <nav
