--- a/templates/psico.html
+++ b/templates/psico.html
@@ -19,7 +19,7 @@
     />
     <!-- Anclaje al archivo de estilos-->
   </head>
-  <body>
+  <body class="fondo">
     <header>
       <!-- Barra de navegacion y portada-->
       <nav
