--- a/templates/recreacion.html
+++ b/templates/recreacion.html
@@ -18,7 +18,7 @@
     />
     <!-- Anclaje al archivo de estilos-->
   </head>
-  <body>
+  <body class="fondo">
     <!-- Barra de navegacion y portada-->
 
     <header>
